--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 
     <h2>What is your name?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+      Gözde Sakal
     </p>
 
-    <h2>What is a fun fact about yourself?</h2>
+    <h2>What is a fact about yourself?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+      I love yoga.
     </p>
 
     <h2>What do you look like?</h2>
-    <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
-
+      <img src="yoga.png" height="142" width="142" />
   </body>
 </html>
